2005-10-09  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_field_ref): Removed unneeded cast.

2005-10-09  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_field_ref): Removed 'const'.
	(visit_method_invocation): Likewise.

2005-10-08  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* tree.hh (tree_generator): Adjustments for changes in the
	visitor interface for the pretty-printer implementation.

2005-10-07  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* tree.hh (tree_generator): Dummy implementations of new visitor
	methods.

2005-10-04  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_field_ref): Handle constant expressions.

2005-10-04  Tom Tromey  <tromey@redhat.com>

	* Make-lang.in (JAVA_OBJS): Added resource.o.
	* resource.cc: New file.
	* treegen.cc (compile_resource): New method.
	* hooks.hh (resource_list): Declare.
	(compile_resource_file, compile_resource_data): Likewise.
	* decl.cc (resource_list): New global.
	* driver.cc (arg_info::resource_name): New field.
	(arg_info): Initialize it.
	(handle_option): Set resource_name.
	(process_one_file): Handle resource_name.
	* treegen.hh (tree_code_generator::compile_resource): Declare.

2005-10-03  Tom Tromey  <tromey@redhat.com>

	* tree.cc (build_new_array): Use correct return type for function
	call.

2005-10-03  Tom Tromey  <tromey@redhat.com>

	* Make-lang.in (java.tags): Updated.

2005-10-03  Tom Tromey  <tromey@redhat.com>

	* glue.hh (hex_value): Undef.

2005-09-11  Tom Tromey  <tromey@redhat.com>

	* driver.cc (arg_info::dependencies): New field.
	(arg_info::print_phonies): Likewise.
	(arg_info::include_system_files): Likewise.
	(arg_info::dependency_file): Likewise.
	(arg_info::target): Likewise.
	(arg_info::deps_to_file): Likewise.
	(arg_info): Initialize it.
	(~arg_info): New destructor.
	(arg_info::init_dependencies): New method.
	(finish): Write out dependencies.
	(handle_option): Handle -M family of options.
	* glue.hh: Include mkdeps.h.

2005-09-11  Ranjit Mathew  <rmathew@gcc.gnu.org>
